<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Generate">

    <ScrollView
        android:id="@+id/qr_generator_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="7dp"
                    android:gravity="center"
                    android:text="@string/generate_new_qr"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/qr_data"
                    style="@style/edittext"
                    android:hint="@string/write_smth"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/qr_generator"
                    style="@style/btn"
                    android:layout_width="200dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/green_btn"
                    android:text="@string/generate"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/generated_qr"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_generated"
                    style="@style/btn"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:height="50dp"
                    android:background="@drawable/green_white_btn"
                    android:text="@string/save"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>